--- a/infra/cloudbuild/cloudbuild.yaml
+++ b/infra/cloudbuild/cloudbuild.yaml
@@ -1,14 +1,14 @@
 steps:
-  - id: tf init
-    name: hashicorp/terraform:1.0.0
+- id: tf init
+    name: 'hashicorp/terraform:1.0.0'
     entrypoint: bash
     dir: 'infra/terraform'
     args: 
       - '-c'
       - 'terraform init'
 
-  - id: tf plan
-    name: hashicorp/terraform:1.0.0
+- id: tf plan
+    name: 'hashicorp/terraform:1.0.0'
     entrypoint: bash
     dir: 'infra/terraform'
     args: 
@@ -16,8 +16,8 @@ steps:
       - 'terraform plan'
     waitFor: ['tf init']
 
-  - id: tf apply
-    name: hashicorp/terraform:1.0.0
+- id: tf apply
+    name: 'hashicorp/terraform:1.0.0'
     entrypoint: bash
     dir: 'infra/terraform'
     args: 
