--- a/infra/cloudbuild/backend.yaml
+++ b/infra/cloudbuild/backend.yaml
@@ -1,16 +1,16 @@
 steps:
 - id: build-backend
   name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/fabra-344902/fabra:$COMMIT_SHA', 'backend/']
+  args: ['build', '-t', 'gcr.io/fabra-344902/fabra', 'backend/']
   waitFor: ['-']
 
 - id: push-backend
   name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/fabra-344902/fabra:$COMMIT_SHA']
+  args: ['push', 'gcr.io/fabra-344902/fabra']
   waitFor: ['build-backend']
 
 - id: deploy-backend
   name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: gcloud
-  args: ['run', 'deploy', 'fabra', '--image', 'gcr.io/fabra-344902/fabra:$COMMIT_SHA', '--region', 'us-west1', '--platform', 'managed']
+  args: ['run', 'deploy', 'fabra', '--image', 'gcr.io/fabra-344902/fabra', '--region', 'us-west1', '--platform', 'managed']
   waitFor: ['push-backend']
