Include all tags in docker image upload

--- a/infra/cloudbuild/backend.yaml
+++ b/infra/cloudbuild/backend.yaml
@@ -6,7 +6,7 @@ steps:
 
 - id: push-backend
   name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/fabra-344902/fabra']
+  args: ['push', 'gcr.io/fabra-344902/fabra', '--all-tags']
   waitFor: ['build-backend']
 
 - id: deploy-backend
