--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "@babel/core": "7.12.3",
     "@material-ui/core": "^4.11.2",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
-    "@svgr/webpack": "5.4.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
+    "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
@@ -51,7 +51,7 @@
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
     "mini-css-extract-plugin": "0.11.3",
-    "optimize-css-assets-webpack-plugin": "5.0.4",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "path-to-regexp": "^6.2.0",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
@@ -62,10 +62,9 @@
     "prompts": "2.4.0",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
-    "react-dev-utils": "^11.0.1",
+    "react-dev-utils": "^12.0.1",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.1.25",
-    "react-quill": "^2.0.0-beta.2",
     "react-redux": "^7.2.2",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
@@ -80,8 +79,8 @@
     "url-loader": "4.1.1",
     "validator": "^13.5.2",
     "web-vitals": "^0.2.4",
-    "webpack": "4.44.2",
-    "webpack-dev-server": "3.11.0",
+    "webpack": "^5.72.0",
+    "webpack-dev-server": "^4.8.1",
     "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "5.1.4"
   },
