Get google login working

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,2 +1,5 @@
 build:
 	go build -o bin/server cmd/main.go
+
+migrate:
+	migrate -path migrations/ -database "postgres://fabra:fabra@localhost:5432/fabra?sslmode=disable" up
