--- a/infra/cloudbuild/backend.yaml
+++ b/infra/cloudbuild/backend.yaml
@@ -6,7 +6,7 @@ steps:
 
 - id: push-backend
   name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/fabra-344902/fabra', '--all-tags']
+  args: ['push', 'gcr.io/fabra-344902/fabra:latest']
   waitFor: ['build-backend']
 
 - id: deploy-backend
@@ -14,3 +14,5 @@ steps:
   entrypoint: gcloud
   args: ['run', 'deploy', 'fabra', '--image', 'gcr.io/fabra-344902/fabra:latest', '--region', 'us-west1', '--platform', 'managed']
   waitFor: ['push-backend']
+
+images: ['gcr.io/fabra-344902/fabra:$COMMIT_SHA', 'gcr.io/fabra-344902/fabra:latest']
