--- a/infra/cloudbuild/frontend.yaml
+++ b/infra/cloudbuild/frontend.yaml
@@ -14,5 +14,5 @@ steps:
   - id: deploy-frontend
     name: 'gcr.io/cloud-builders/gsutil'
     entrypoint: gsutil
-    args: ['cp', '-r', 'frontend/build/*', 'gs://app.fabra.io']
+    args: ['cp', '-r', 'frontend/build/*', 'gs://fabra-frontend-bucket']
     waitFor: ['build-frontend']
