--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,6 @@
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
     "@types/validator": "^13.1.1",
-    "@uiw/react-md-editor": "^3.12.1",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
@@ -59,6 +58,8 @@
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
     "semver": "^7.3.5",
+    "slate": "^0.78.0",
+    "slate-react": "^0.79.0",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.2",
