--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
     "postcss-loader": "^6.2.1",
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.0.1",
+    "prismjs": "^1.28.0",
     "prompts": "^2.4.2",
     "react": "^17.0.2",
     "react-app-polyfill": "^3.0.0",
@@ -98,6 +99,7 @@
     ]
   },
   "devDependencies": {
+    "@types/prismjs": "^1.26.0",
     "@types/redux-mock-store": "^1.0.3",
     "redux-mock-store": "^1.5.4"
   },
