--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,13 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.16.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@reduxjs/toolkit": "^1.8.1",
+    "@remirror/pm": "^1.0.22",
+    "@remirror/react": "^1.0.43",
+    "@remirror/react-editors": "^0.1.89",
     "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.1",
@@ -48,7 +53,6 @@
     "postcss-loader": "^6.2.1",
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.0.1",
-    "prismjs": "^1.28.0",
     "prompts": "^2.4.2",
     "react": "^17.0.2",
     "react-app-polyfill": "^3.0.0",
@@ -57,12 +61,11 @@
     "react-redux": "^7.2.2",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.3.0",
+    "remirror": "^1.0.89",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
     "semver": "^7.3.5",
-    "slate": "^0.78.0",
-    "slate-react": "^0.79.0",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.2",
@@ -99,7 +102,6 @@
     ]
   },
   "devDependencies": {
-    "@types/prismjs": "^1.26.0",
     "@types/redux-mock-store": "^1.0.3",
     "redux-mock-store": "^1.5.4"
   },
