--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "@babel/core": "^7.16.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "@mui/material": "^5.8.5",
+    "@headlessui/react": "^1.6.6",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@reduxjs/toolkit": "^1.8.1",
     "@remirror/pm": "^1.0.22",
@@ -69,7 +69,6 @@
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
-    "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
     "typescript": "^4.6.4",
     "validator": "^13.5.2",
@@ -104,7 +103,10 @@
   },
   "devDependencies": {
     "@types/redux-mock-store": "^1.0.3",
-    "redux-mock-store": "^1.5.4"
+    "autoprefixer": "^10.4.7",
+    "postcss-cli": "^10.0.0",
+    "redux-mock-store": "^1.5.4",
+    "tailwindcss": "^3.1.5"
   },
   "jest": {
     "roots": [
