--- a/frontend/package.json
+++ b/frontend/package.json
@@ -67,6 +67,7 @@
     "remirror": "^1.0.89",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
+    "rudder-sdk-js": "^2.12.1",
     "sass-loader": "^12.3.0",
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
