--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "jest-watch-typeahead": "^1.0.0",
     "jwt-decode": "^3.1.2",
     "mini-css-extract-plugin": "^2.4.5",
+    "monaco-editor-webpack-plugin": "^7.0.1",
     "path-to-regexp": "^6.2.0",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -58,6 +59,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^17.0.2",
+    "react-monaco-editor": "^0.50.1",
     "react-redux": "^7.2.2",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.3.0",
