--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.33",
     "@types/react": "^18.0.8",
+    "@types/react-csv": "^1.1.3",
     "@types/react-dom": "^18.0.3",
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.3.3",
@@ -57,6 +58,7 @@
     "prompts": "^2.4.2",
     "react": "^17.0.2",
     "react-app-polyfill": "^3.0.0",
+    "react-csv": "^2.2.2",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^17.0.2",
     "react-monaco-editor": "^0.50.1",
