--- a/infra/cloudbuild/backend.yaml
+++ b/infra/cloudbuild/backend.yaml
@@ -2,7 +2,7 @@ steps:
 - id: test-backend
   name: 'golang:1.18'
   entrypoint: /bin/bash
-  args: ['ls']
+  args: ['echo "switched `pwd`"']
 
 - id: build-backend
   name: 'gcr.io/cloud-builders/docker'
