--- a/infra/cloudbuild/backend.yaml
+++ b/infra/cloudbuild/backend.yaml
@@ -1,8 +1,8 @@
 steps:
 - id: test-backend
   name: 'golang:1.18'
-  entrypoint: /bin/bash
-  args: ['echo "switched `pwd`"']
+  entrypoint: bash
+  args: ['go test -v backend/...']
 
 - id: build-backend
   name: 'gcr.io/cloud-builders/docker'
