--- a/infra/cloudbuild/backend.yaml
+++ b/infra/cloudbuild/backend.yaml
@@ -2,7 +2,10 @@ steps:
 - id: test-backend
   name: 'golang:1.18'
   entrypoint: bash
-  args: ['go test -v backend/...']
+  args:
+    - '-c'
+    - 'go test -v backend/...'
+  waitFor: ['-']
 
 - id: build-backend
   name: 'gcr.io/cloud-builders/docker'
