Only use Cloud Build settings on Cloud Build

--- a/infra/cloudbuild/backend.yaml
+++ b/infra/cloudbuild/backend.yaml
@@ -4,6 +4,8 @@ steps:
   script: |
     cd backend;
     go test -v ./...;
+  env:
+    - 'IS_CLOUD_BUILD=true'
   waitFor: ['-']
 
 - id: build-backend
