Use default connection and event set for analyses

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -3,3 +3,6 @@ build:
 
 migrate:
 	migrate -path migrations/ -database "postgres://fabra:fabra@localhost:5432/fabra?sslmode=disable" up
+
+migrate-down:
+	migrate -path migrations/ -database "postgres://fabra:fabra@localhost:5432/fabra?sslmode=disable" down 1
