--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,11 @@
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^2.0.10",
     "@highlight-run/react": "^1.1.11",
-    "@nextui-org/react": "^1.0.0-beta.10",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@reduxjs/toolkit": "^1.8.1",
     "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.1",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^12.5.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.33",
@@ -56,15 +55,16 @@
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.0.1",
     "prompts": "^2.4.2",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-csv": "^2.2.2",
     "react-dev-utils": "^12.0.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-monaco-editor": "^0.50.1",
     "react-redux": "^7.2.2",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.3.0",
+    "react-tooltip": "^4.4.3",
     "recharts": "^2.1.15",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
