--- a/frontend/package.json
+++ b/frontend/package.json
@@ -73,6 +73,7 @@
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
+    "swr": "^1.3.0",
     "terser-webpack-plugin": "^5.2.5",
     "typescript": "^4.6.4",
     "validator": "^13.5.2",
