--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^12.5.0",
+    "@tippyjs/react": "^4.2.6",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.33",
     "@types/react": "^18.0.8",
@@ -64,7 +65,6 @@
     "react-redux": "^7.2.2",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.3.0",
-    "react-tooltip": "^4.4.3",
     "recharts": "^2.1.15",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
