--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,7 +65,7 @@
     "react-redux": "^7.2.2",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.3.0",
-    "recharts": "^2.1.15",
+    "recharts": "^2.3.0-alpha.1",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "rudder-sdk-js": "^2.12.1",
