Update infrastructure to use static IP for egress

--- a/infra/cloudbuild/database-migration.yaml
+++ b/infra/cloudbuild/database-migration.yaml
@@ -13,7 +13,7 @@ steps:
     args:
       - '-c'
       - |
-        /workspace/migrate -path backend/migrations/ -database postgres://db_user:$$DATABASE_PASS@10.111.1.3:5432/fabra-db up && \
+        /workspace/migrate -path backend/server/migrations/ -database postgres://db_user:$$DATABASE_PASS@10.111.1.3:5432/fabra-db up && \
         echo "MIGRATION COMPLETE"
     secretEnv: ['DATABASE_PASS']
     waitFor: ['install-migrate']
