--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^2.0.10",
     "@highlight-run/react": "^1.1.11",
+    "@popperjs/core": "^2.11.6",
     "@reduxjs/toolkit": "^1.8.1",
     "@tippyjs/react": "^4.2.6",
     "@types/react": "^18.0.8",
@@ -19,6 +20,7 @@
     "path-to-regexp": "^6.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-popper": "^2.3.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.3.0",
     "rudder-sdk-js": "^2.12.1",
