--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@heroicons/react": "^2.0.10",
     "@highlight-run/react": "^1.1.11",
     "@popperjs/core": "^2.11.6",
+    "@radix-ui/react-checkbox": "^1.0.2",
     "@reduxjs/toolkit": "^1.8.1",
     "@tippyjs/react": "^4.2.6",
     "@types/react": "^18.0.8",
