--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,8 @@
   "scripts": {
     "start": "vite dev --config vite-app.config.ts",
     "build": "vite build --config vite-app.config.ts",
-    "build-connect": "vite build --config vite-connect.config.ts"
+    "build-connect": "vite build --config vite-connect.config.ts",
+    "build-initialize": "vite build --config vite-initialize.config.ts"
   },
   "eslintConfig": {
     "extends": [
