--- a/infra/cloudbuild/connect.yaml
+++ b/infra/cloudbuild/connect.yaml
@@ -16,3 +16,15 @@ steps:
     entrypoint: gsutil
     args: ['cp', '-r', 'frontend/build/*', 'gs://fabra-connect-bucket']
     waitFor: ['build-connect']
+
+  - id: build-initialize
+    name: node
+    entrypoint: npm
+    args: ['--prefix', 'frontend/', 'run', 'build-initialize']
+    waitFor: ['deploy-connect']
+
+  - id: deploy-initialize
+    name: 'gcr.io/cloud-builders/gsutil'
+    entrypoint: gsutil
+    args: ['cp', 'frontend/build/initialize.js', 'gs://fabra-connect-bucket']
+    waitFor: ['build-initialize']
