Update server build to include temporal code

--- a/infra/cloudbuild/backend.yaml
+++ b/infra/cloudbuild/backend.yaml
@@ -10,7 +10,7 @@ steps:
 
 - id: build-backend
   name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/fabra-344902/fabra:$COMMIT_SHA', '-t', 'gcr.io/fabra-344902/fabra:latest', 'backend/server/']
+  args: ['build', '-t', 'gcr.io/fabra-344902/fabra:$COMMIT_SHA', '-t', 'gcr.io/fabra-344902/fabra:latest', '-f', 'backend/server/Dockerfile', 'backend/]
   waitFor: ['test-backend']
 
 - id: push-backend
