--- a/backend/server/Dockerfile
+++ b/backend/server/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /app
 # Retrieve application dependencies.
 # This allows the container build to reuse cached dependencies.
 # Expecting to copy go.mod and if present go.sum.
-COPY go.* ./
+COPY server/go.* ./
 RUN go mod download
 
 # Copy local code to the container image.
