--- a/backend/server/Dockerfile
+++ b/backend/server/Dockerfile
@@ -13,7 +13,7 @@ RUN go mod download
 COPY . ./
 
 # Build the binary.
-RUN go build -mod=readonly -v -o server server/cmd/main.go
+RUN go build -mod=readonly -v -o runserver server/cmd/main.go
 
 # Use the official Debian slim image for a lean production container.
 # https://hub.docker.com/_/debian
@@ -24,7 +24,7 @@ RUN set -x && apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -
     rm -rf /var/lib/apt/lists/*
 
 # Copy the binary to the production image from the builder stage.
-COPY --from=builder /app/server /app/server
+COPY --from=builder /app/runserver /app/runserver
 
 # Run the web service on container startup.
-CMD ["/app/server"]
+CMD ["/app/runserver"]
