--- a/infra/cloudbuild/worker.yaml
+++ b/infra/cloudbuild/worker.yaml
@@ -10,17 +10,22 @@ steps:
 
 - id: build-sync
   name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/fabra-344902/sync:$COMMIT_SHA', '-t', 'gcr.io/fabra-344902/sync:latest', '-f', 'backend/sync/Dockerfile', 'backend/']
+  args: ['build', '-t', 'gcr.io/fabra-344902/sync:$SHORT_SHA', '-f', 'backend/sync/Dockerfile', 'backend/']
   waitFor: ['test-sync']
 
 - id: push-sync
   name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/fabra-344902/sync:latest']
+  args: ['push', 'gcr.io/fabra-344902/sync:$SHORT_SHA']
   waitFor: ['build-sync']
 
 - id: deploy-sync
   name: "gcr.io/cloud-builders/gke-deploy"
-  args: ['run', '--filename=backend/sync/worker-deployment.yaml', '--location=us-west1', '--cluster=fabra-worker-gke-cluster']
+  args: 
+  - 'run'
+  - '--filename=backend/sync/worker-deployment.yaml'
+  - '--image=gcr.io/fabra-344902/sync:$SHORT_SHA'
+  - '--location=us-west1'
+  - '--cluster=fabra-worker-gke-cluster'
   waitFor: ['push-sync']
 
-images: ['gcr.io/fabra-344902/sync:$COMMIT_SHA', 'gcr.io/fabra-344902/sync:latest']
+images: ['gcr.io/fabra-344902/sync:$SHORT_SHA']
