--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,55 +1,58 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@headlessui/react": "^1.6.6",
-    "@heroicons/react": "^2.0.10",
-    "@highlight-run/react": "^1.1.11",
-    "@popperjs/core": "^2.11.6",
-    "@radix-ui/react-checkbox": "^1.0.2",
-    "@reduxjs/toolkit": "^1.8.1",
-    "@tippyjs/react": "^4.2.6",
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.3",
-    "@types/react-redux": "^7.1.11",
-    "@types/react-router-dom": "^5.3.3",
-    "classnames": "^2.2.6",
-    "eslint": "^8.3.0",
-    "eslint-config-react-app": "^7.0.1",
-    "highlight.run": "^4.3.2",
-    "path-to-regexp": "^6.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-popper": "^2.3.0",
-    "react-redux": "^7.2.2",
-    "react-router-dom": "^6.3.0",
-    "rudder-sdk-js": "^2.12.1",
-    "swr": "^2.0.4",
-    "tailwind-merge": "^1.10.0",
-    "typescript": "^4.6.4"
-  },
-  "scripts": {
-    "start": "vite dev --config vite-app.config.ts",
-    "build": "vite build --config vite-app.config.ts",
-    "build-connect": "vite build --config vite-connect.config.ts",
-    "build-initialize": "vite build --config vite-initialize.config.ts"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
-  },
-  "devDependencies": {
-    "@types/node": "^18.14.1",
-    "@types/redux-mock-store": "^1.0.3",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "postcss-cli": "^10.0.0",
-    "redux-mock-store": "^1.5.4",
-    "tailwindcss": "^3.1.5",
-    "vite": "^4.1.0",
-    "vite-tsconfig-paths": "^4.0.5"
-  }
+	"name": "frontend",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@headlessui/react": "^1.6.6",
+		"@heroicons/react": "^2.0.10",
+		"@highlight-run/react": "^1.1.11",
+		"@popperjs/core": "^2.11.6",
+		"@radix-ui/react-checkbox": "^1.0.2",
+		"@reduxjs/toolkit": "^1.8.1",
+		"@tippyjs/react": "^4.2.6",
+		"@types/react": "^18.0.8",
+		"@types/react-dom": "^18.0.3",
+		"@types/react-redux": "^7.1.11",
+		"@types/react-router-dom": "^5.3.3",
+		"add": "^2.0.6",
+		"classnames": "^2.2.6",
+		"eslint": "^8.3.0",
+		"eslint-config-react-app": "^7.0.1",
+		"highlight.run": "^4.3.2",
+		"path-to-regexp": "^6.2.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-popper": "^2.3.0",
+		"react-redux": "^7.2.2",
+		"react-router-dom": "^6.3.0",
+		"rudder-sdk-js": "^2.12.1",
+		"swr": "^2.0.4",
+		"tailwind-merge": "^1.10.0",
+		"typescript": "^4.6.4",
+		"vite-plugin-svgr": "^2.4.0",
+		"yarn": "^1.22.19"
+	},
+	"scripts": {
+		"start": "vite dev --config vite-app.config.ts",
+		"build": "vite build --config vite-app.config.ts",
+		"build-connect": "vite dev --config vite-connect.config.ts",
+		"build-initialize": "vite build --config vite-initialize.config.ts"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app"
+		]
+	},
+	"devDependencies": {
+		"@types/node": "^18.14.1",
+		"@types/redux-mock-store": "^1.0.3",
+		"@vitejs/plugin-react-swc": "^3.0.0",
+		"autoprefixer": "^10.4.13",
+		"postcss": "^8.4.21",
+		"postcss-cli": "^10.0.0",
+		"redux-mock-store": "^1.5.4",
+		"tailwindcss": "^3.1.5",
+		"vite": "^4.1.0",
+		"vite-tsconfig-paths": "^4.0.5"
+	}
 }
