--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,8 @@
     "rudder-sdk-js": "^2.12.1",
     "swr": "^2.0.4",
     "tailwind-merge": "^1.10.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "vite-plugin-svgr": "^2.4.0"
   },
   "scripts": {
     "start": "vite dev --config vite-app.config.ts",
