--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "eslint": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
     "highlight.run": "^4.3.2",
+    "mirrorful": "^4.0.0",
     "path-to-regexp": "^6.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
