--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,8 +28,7 @@
     "rudder-sdk-js": "^2.12.1",
     "swr": "^2.0.4",
     "tailwind-merge": "^1.10.0",
-    "typescript": "^4.6.4",
-    "vite-plugin-svgr": "^2.4.0"
+    "typescript": "^4.6.4"
   },
   "scripts": {
     "start": "vite dev --config vite-app.config.ts",
@@ -52,6 +51,7 @@
     "redux-mock-store": "^1.5.4",
     "tailwindcss": "^3.1.5",
     "vite": "^4.1.0",
-    "vite-tsconfig-paths": "^4.0.5"
+    "vite-tsconfig-paths": "^4.0.5",
+    "vite-plugin-svgr": "^2.4.0"
   }
 }
