--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,8 @@
     "start": "vite dev --config vite-app.config.ts",
     "build": "vite build --config vite-app.config.ts",
     "build-connect": "vite build --config vite-connect.config.ts",
-    "build-initialize": "vite build --config vite-initialize.config.ts"
+    "build-initialize": "vite build --config vite-initialize.config.ts",
+    "dev-initialize": "vite build --config vite-initialize.config.ts --mode development"
   },
   "eslintConfig": {
     "extends": [
