--- a/backend/sync/worker-deployment.yaml
+++ b/backend/sync/worker-deployment.yaml
@@ -61,6 +61,6 @@ apiVersion: "v1"
 kind: "ServiceAccount"
 metadata:
   annotations:
-    iam.gke.io/gcp-service-account: "932264813910-compute@developer.gserviceaccount.com"
+    iam.gke.io/gcp-service-account: "fabra-sync@fabra-344902.iam.gserviceaccount.com"
   name: "default"
   namespace: "default"
