--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^2.0.10",
@@ -15,7 +16,6 @@
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.3.3",
     "classnames": "^2.2.6",
-    "eslint": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
     "highlight.run": "^4.3.2",
     "mirrorful": "^4.0.0",
@@ -27,8 +27,7 @@
     "react-router-dom": "^6.3.0",
     "rudder-sdk-js": "^2.12.1",
     "swr": "^2.0.4",
-    "tailwind-merge": "^1.10.0",
-    "typescript": "^4.6.4"
+    "tailwind-merge": "^1.10.0"
   },
   "scripts": {
     "start": "vite dev --config vite-app.config.ts",
@@ -45,14 +44,18 @@
   "devDependencies": {
     "@types/node": "^18.14.1",
     "@types/redux-mock-store": "^1.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.13",
+    "eslint": "^8.37.0",
     "postcss": "^8.4.21",
     "postcss-cli": "^10.0.0",
     "redux-mock-store": "^1.5.4",
     "tailwindcss": "^3.1.5",
+    "typescript": "^5.0.3",
     "vite": "^4.1.0",
-    "vite-tsconfig-paths": "^4.0.5",
-    "vite-plugin-svgr": "^2.4.0"
+    "vite-plugin-svgr": "^2.4.0",
+    "vite-tsconfig-paths": "^4.0.5"
   }
 }
