--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-popper": "^2.3.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.3.0",
+    "react-script-hook": "^1.7.2",
     "rudder-sdk-js": "^2.12.1",
     "swr": "^2.0.4",
     "tailwind-merge": "^1.10.0"
