--- a/infra/cloudbuild/backend.yaml
+++ b/infra/cloudbuild/backend.yaml
@@ -13,9 +13,9 @@ steps:
   args:
   - build
   - '-t'
-  - 'gcr.io/fabra-344902/fabra:$COMMIT_SHA'
+  - 'us-docker.pkg.dev/fabra-344902/fabra-server/fabra:$COMMIT_SHA'
   - '-t'
-  - 'gcr.io/fabra-344902/fabra:latest'
+  - 'us-docker.pkg.dev/fabra-344902/fabra-server/fabra:latest'
   - '-f'
   - 'backend/server/Dockerfile'
   - 'backend/'
@@ -23,13 +23,13 @@ steps:
 
 - id: push-backend
   name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/fabra-344902/fabra:latest']
+  args: ['push', 'us-docker.pkg.dev/fabra-344902/fabra-server/fabra:latest']
   waitFor: ['build-backend']
 
 - id: deploy-backend
   name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: gcloud
-  args: ['run', 'deploy', 'fabra', '--image', 'gcr.io/fabra-344902/fabra:latest', '--region', 'us-west1', '--platform', 'managed']
+  args: ['run', 'deploy', 'fabra', '--image', 'us-docker.pkg.dev/fabra-344902/fabra-server/fabra:latest', '--region', 'us-west1', '--platform', 'managed']
   waitFor: ['push-backend']
 
-images: ['gcr.io/fabra-344902/fabra:$COMMIT_SHA', 'gcr.io/fabra-344902/fabra:latest']
+images: ['us-docker.pkg.dev/fabra-344902/fabra-server/fabra:$COMMIT_SHA', 'us-docker.pkg.dev/fabra-344902/fabra-server/fabra:latest']
