--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,8 @@
     "build": "vite build --config vite-app.config.ts",
     "build-connect": "vite build --config vite-connect.config.ts",
     "build-initialize": "vite build --config vite-initialize.config.ts",
-    "dev-initialize": "vite build --config vite-initialize.config.ts --mode development"
+    "dev-initialize": "vite build --config vite-initialize.config.ts --mode development",
+    "pretty": "prettier --write \"./**/*.{js,jsx,ts,tsx,json}\""
   },
   "eslintConfig": {
     "extends": [
