--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -2,15 +2,8 @@
   "compilerOptions": {
     "baseUrl": "./",
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "types": [
-      "vite/client",
-      "node"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "types": ["vite/client", "node"],
     "allowJs": false,
     "skipLibCheck": false,
     "esModuleInterop": false,
@@ -23,10 +16,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
+    "jsx": "react-jsx"
   },
-  "include": [
-    "src",
-    ".eslintrc.cjs"
-  ]
+  "include": ["src", ".eslintrc.cjs"]
 }
