--- a/infra/cloudbuild/worker.yaml
+++ b/infra/cloudbuild/worker.yaml
@@ -10,12 +10,20 @@ steps:
 
 - id: build-sync
   name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'us-docker.pkg.dev/fabra-344902/fabra-sync/sync:$SHORT_SHA', '-f', 'backend/sync/Dockerfile', 'backend/']
+  args:
+  - build
+  - '-t'
+  - 'us-docker.pkg.dev/fabra-344902/fabra-sync/sync:$SHORT_SHA'
+  - '-t'
+  - 'us-docker.pkg.dev/fabra-344902/fabra-sync/sync:latest'
+  - '-f'
+  - 'backend/sync/Dockerfile'
+  - 'backend/'
   waitFor: ['test-sync']
 
 - id: push-sync
   name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'us-docker.pkg.dev/fabra-344902/fabra-sync/sync:$SHORT_SHA']
+  args: ['push', 'us-docker.pkg.dev/fabra-344902/fabra-sync/sync:latest']
   waitFor: ['build-sync']
 
 - id: deploy-sync
@@ -23,9 +31,9 @@ steps:
   args: 
   - 'run'
   - '--filename=backend/sync/gke-deployment.yaml'
-  - '--image=us-docker.pkg.dev/fabra-344902/fabra-sync/sync:$SHORT_SHA'
+  - '--image=us-docker.pkg.dev/fabra-344902/fabra-sync/sync:latest'
   - '--location=us-west1'
   - '--cluster=fabra-sync-gke-cluster'
   waitFor: ['push-sync']
 
-images: ['us-docker.pkg.dev/fabra-344902/fabra-sync/sync:$SHORT_SHA']
+images: ['us-docker.pkg.dev/fabra-344902/fabra-sync/sync:$SHORT_SHA', 'us-docker.pkg.dev/fabra-344902/fabra-sync/sync:latest']
