--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,8 @@
     "react-script-hook": "^1.7.2",
     "rudder-sdk-js": "^2.12.1",
     "swr": "^2.0.4",
-    "tailwind-merge": "^1.10.0"
+    "tailwind-merge": "^1.10.0",
+    "zod": "^3.21.4"
   },
   "scripts": {
     "start": "vite dev --config vite-app.config.ts",
