--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^2.0.10",
     "@highlight-run/react": "^1.1.11",
+    "@hookform/resolvers": "^3.1.0",
     "@popperjs/core": "^2.11.6",
     "@radix-ui/react-checkbox": "^1.0.2",
     "@reduxjs/toolkit": "^1.8.1",
@@ -21,13 +22,15 @@
     "path-to-regexp": "^6.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.2",
     "react-popper": "^2.3.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.11.2",
     "react-script-hook": "^1.7.2",
     "rudder-sdk-js": "^2.12.1",
     "swr": "^2.0.4",
-    "tailwind-merge": "^1.10.0"
+    "tailwind-merge": "^1.10.0",
+    "zod": "^3.21.4"
   },
   "scripts": {
     "start": "vite dev --config vite-app.config.ts",
