--- a/infra/cloudbuild/connect.yaml
+++ b/infra/cloudbuild/connect.yaml
@@ -14,7 +14,7 @@ steps:
   - id: deploy-connect
     name: 'gcr.io/cloud-builders/gsutil'
     entrypoint: gsutil
-    args: ['cp', '-r', 'frontend/build/*', 'gs://fabra-connect-bucket']
+    args: ['cp', '-r', 'frontend/build/*', 'gs://fabra-connect-bucket-us']
     waitFor: ['build-connect']
 
   - id: build-initialize
@@ -26,5 +26,5 @@ steps:
   - id: deploy-initialize
     name: 'gcr.io/cloud-builders/gsutil'
     entrypoint: gsutil
-    args: ['cp', 'frontend/build/initialize.js', 'gs://fabra-connect-bucket']
+    args: ['cp', 'frontend/build/initialize.js', 'gs://fabra-connect-bucket-us']
     waitFor: ['build-initialize']
