--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^2.0.10",
     "@highlight-run/react": "^1.1.11",
@@ -26,7 +27,6 @@
     "react-popper": "^2.3.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.11.2",
-    "react-script-hook": "^1.7.2",
     "rudder-sdk-js": "^2.12.1",
     "swr": "^2.0.4",
     "tailwind-merge": "^1.10.0",
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
+    "@types/google.maps": "^3.53.5",
     "@types/node": "^18.14.1",
     "@types/redux-mock-store": "^1.0.3",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
