Update logos and name everywhere
Also update terms and privacy policy

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Fabra",
-  "name": "Fabra",
+  "short_name": "Coaster",
+  "name": "Coaster",
   "icons": [
     {
       "src": "favicon.ico",
