--- a/infra/cloudbuild/backend.yaml
+++ b/infra/cloudbuild/backend.yaml
@@ -9,7 +9,7 @@ steps:
   waitFor: ['-']
 
 - id: build-backend
-  name: 'gcr.io/cloud-builders/docker'
+  name: 'ghcr.io/depot/cli:latest'
   args:
   - build
   - '-t'
