Add provenance=false to depot build to avoid extra images

--- a/infra/cloudbuild/backend.yaml
+++ b/infra/cloudbuild/backend.yaml
@@ -19,6 +19,7 @@ steps:
   - '-t'
   - 'us-docker.pkg.dev/fabra-prod/fabra-server/fabra:latest'
   - '--push'
+  - '--provenance=false'
   - 'backend/'
   waitFor: ['test-backend']
   secretEnv: ['DEPOT_TOKEN']
