Update build process

--- a/infra/cloudbuild/frontend.yaml
+++ b/infra/cloudbuild/frontend.yaml
@@ -19,5 +19,5 @@ steps:
   - id: deploy-frontend
     name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: 'bash'
-    args: ['gcloud app deploy']
+    args: ['-c', 'gcloud app deploy']
     waitFor: ['copy-config']
