--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.2.6",
     "eslint-config-react-app": "^7.0.1",
     "highlight.run": "^6.0.3",
+    "libphonenumber-js": "^1.10.41",
     "path-to-regexp": "^6.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
