--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@floating-ui/react": "^0.25.0",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@headlessui/react": "^1.6.6",
+    "@headlessui/tailwindcss": "^0.2.0",
     "@heroicons/react": "^2.0.10",
     "@highlight-run/react": "^1.1.11",
     "@hookform/resolvers": "^3.1.0",
