--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -16,6 +16,11 @@
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "long-logo.png",
+      "type": "image/png",
+      "sizes": "500x80"
     }
   ],
   "start_url": ".",
