--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,12 @@
     "classnames": "^2.3.2",
     "eslint-config-react-app": "^7.0.1",
     "highlight.run": "^6.5.3",
+    "immutability-helper": "^3.1.1",
     "libphonenumber-js": "^1.10.41",
     "path-to-regexp": "^6.2.1",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-redux": "^7.2.9",
