--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,9 +37,8 @@
   "scripts": {
     "start": "vite dev --host --config vite-app.config.ts",
     "build": "vite build --config vite-app.config.ts",
-    "build-connect": "vite build --config vite-connect.config.ts",
-    "build-initialize": "vite build --config vite-initialize.config.ts",
-    "dev-initialize": "vite build --config vite-initialize.config.ts --mode development",
+    "start-supplier": "vite dev --host --config vite-supplier.config.ts",
+    "build-supplier": "vite build --config vite-supplier.config.ts",
     "pretty": "prettier --write \"./**/*.{js,jsx,ts,tsx,json}\""
   },
   "eslintConfig": {
