--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,14 @@
     "@types/react-dom": "^18.2.7",
     "@types/react-redux": "^7.1.25",
     "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
     "eslint-config-react-app": "^7.0.1",
     "highlight.run": "^7.5.2",
     "immutability-helper": "^3.1.1",
     "libphonenumber-js": "^1.10.41",
     "path-to-regexp": "^6.2.1",
     "react": "^18.2.0",
+    "react-day-picker": "^8.8.2",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
