--- a/frontend/packages/assets/package.json
+++ b/frontend/packages/assets/package.json
@@ -5,5 +5,8 @@
   "types": "./index.ts",
   "scripts": {
     "lint": "eslint ."
+  },
+  "devDependencies": {
+    "eslint-config-custom": "*"
   }
 }
