--- a/frontend/packages/components/package.json
+++ b/frontend/packages/components/package.json
@@ -29,7 +29,7 @@
     "zod": "^3.22.3"
   },
   "devDependencies": {
-    "@coaster/eslint-config": "*",
+    "eslint-config-custom": "*",
     "@coaster/tsconfig": "*",
     "@types/google.maps": "^3.54.4",
     "@types/node": "^18.18.3",
