--- a/frontend/packages/rpc/package.json
+++ b/frontend/packages/rpc/package.json
@@ -18,7 +18,7 @@
     "swr": "^2.2.4"
   },
   "devDependencies": {
-    "@coaster/eslint-config": "*",
+    "eslint-config-custom": "*",
     "@coaster/tsconfig": "*",
     "eslint": "^7.32.0",
     "typescript": "^4.5.2"
