--- a/frontend/packages/state/package.json
+++ b/frontend/packages/state/package.json
@@ -18,7 +18,7 @@
     "next": "^13.5.6"
   },
   "devDependencies": {
-    "@coaster/eslint-config": "*",
+    "eslint-config-custom": "*",
     "@coaster/tsconfig": "*",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
