--- a/frontend/packages/utils/package.json
+++ b/frontend/packages/utils/package.json
@@ -6,15 +6,15 @@
   "scripts": {
     "lint": "eslint \"**/*.ts*\""
   },
-  "devDependencies": {
-    "@coaster/eslint-config": "*",
-    "@coaster/tsconfig": "*",
-    "eslint": "^7.32.0",
-    "typescript": "^4.5.2"
-  },
   "dependencies": {
     "tailwind-merge": "^1.14.0",
     "highlight.run": "^8.0.1",
     "react-dnd": "^16.0.1"
+  },
+  "devDependencies": {
+    "@coaster/tsconfig": "*",
+    "eslint-config-custom": "*",
+    "eslint": "^7.32.0",
+    "typescript": "^4.5.2"
   }
 }
