Add rudderstack back to project

--- a/frontend/apps/consumer/package.json
+++ b/frontend/apps/consumer/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@coaster/assets": "*",
     "@coaster/components": "*",
-    "@coaster/utils": "*",
-    "@coaster/state": "*",
     "@coaster/rpc": "*",
+    "@coaster/state": "*",
+    "@coaster/utils": "*",
     "@floating-ui/react": "^0.26.1",
     "@headlessui/react": "^1.7.17",
     "@headlessui/tailwindcss": "^0.2.0",
@@ -21,34 +21,34 @@
     "@highlight-run/next": "^7.0.1",
     "@highlight-run/react": "^3.2.1",
     "@hookform/resolvers": "^3.3.2",
+    "@rudderstack/analytics-js": "^3.0.0-beta.13",
     "date-fns": "^2.30.0",
     "highlight.run": "^8.0.1",
     "immutability-helper": "^3.1.1",
     "libphonenumber-js": "^1.10.48",
+    "next": "^13.5.6",
     "path-to-regexp": "^6.2.1",
+    "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
-    "rudder-sdk-js": "^2.43.0",
     "swr": "^2.2.4",
     "tailwind-merge": "^1.14.0",
-    "zod": "^3.22.4",
-    "next": "^13.5.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "eslint-config-custom": "*",
-    "@coaster/tsconfig": "*",
     "@coaster/tailwind-config": "*",
+    "@coaster/tsconfig": "*",
     "@next/eslint-plugin-next": "^13.5.6",
     "@types/node": "^20.8.9",
     "@types/react": "^18.2.32",
     "@types/react-dom": "^18.2.14",
-    "typescript": "^5.2.2",
-    "tailwindcss": "^3.3.5",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31"
+    "eslint-config-custom": "*",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.2.2"
   }
 }
