Fix login and logout

--- a/frontend/packages/rpc/package.json
+++ b/frontend/packages/rpc/package.json
@@ -14,6 +14,8 @@
     "@coaster/utils":"*",
     "@coaster/state":"*",
     "highlight.run": "^8.0.1",
+    "react-dom": "^18.2.0",
+    "react": "^18.2.0",
     "next": "^13.5.6",
     "swr": "^2.2.4"
   },
