--- a/frontend/packages/components/package.json
+++ b/frontend/packages/components/package.json
@@ -24,6 +24,8 @@
     "react-day-picker": "^8.9.1",
     "tailwind-merge": "^1.14.0",
     "highlight.run": "^8.0.1",
+    "react-dom": "^18.2.0",
+    "react": "^18.2.0",
     "next": "^13.5.6",
     "swr": "^2.2.4",
     "zod": "^3.22.4"
@@ -37,7 +39,6 @@
     "@types/react-dom": "^18.2.14",
     "@types/react-redux": "^7.1.28",
     "eslint": "^8.52.0",
-    "react": "18.2",
     "typescript": "^5.2.2"
   }
 }
