Part way through, can revert from here

--- a/frontend/apps/consumer/package.json
+++ b/frontend/apps/consumer/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coaster/types":"*",
     "@coaster/assets": "*",
     "@coaster/components": "*",
     "@coaster/rpc": "*",
