--- a/frontend/packages/components/package.json
+++ b/frontend/packages/components/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@coaster/types":"*",
     "@coaster/state": "*",
     "@coaster/utils": "*",
     "@coaster/assets": "*",
