--- a/frontend/packages/rpc/package.json
+++ b/frontend/packages/rpc/package.json
@@ -11,8 +11,9 @@
     "lint": "eslint \"**/*.ts*\""
   },
   "dependencies": {
-    "@coaster/utils":"*",
-    "@coaster/state":"*",
+    "@coaster/types": "*",
+    "@coaster/utils": "*",
+    "@coaster/state": "*",
     "highlight.run": "^8.0.1",
     "react-dom": "^18.2.0",
     "react": "^18.2.0",
