--- a/frontend/packages/state/package.json
+++ b/frontend/packages/state/package.json
@@ -7,6 +7,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@coaster/types":"*",
     "@coaster/utils":"*",
     "@headlessui/react": "^1.7.17",
     "@headlessui/tailwindcss": "^0.2.0",
