Remove libphonenumber-js and other optimizations

--- a/frontend/packages/components/package.json
+++ b/frontend/packages/components/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@coaster/components",
   "version": "1.0.0",
+  "sideEffects": false,
   "types": "./index.ts",
   "exports": {
     "./client": "./client.ts",
