--- a/frontend/apps/consumer/package.json
+++ b/frontend/apps/consumer/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@coaster/types":"*",
     "@coaster/assets": "*",
     "@coaster/components": "*",
     "@coaster/rpc": "*",
     "@coaster/state": "*",
+    "@coaster/types": "*",
     "@coaster/utils": "*",
     "@floating-ui/react": "^0.26.1",
     "@headlessui/react": "^1.7.17",
@@ -23,25 +23,25 @@
     "@highlight-run/react": "^3.2.1",
     "@hookform/resolvers": "^3.3.2",
     "@rudderstack/analytics-js": "^3.0.0-beta.13",
+    "date-fns": "^2.30.0",
     "highlight.run": "^8.0.1",
     "immutability-helper": "^3.1.1",
-    "libphonenumber-js": "^1.10.48",
-    "tailwind-merge": "^1.14.0",
-    "path-to-regexp": "^6.2.1",
-    "date-fns": "^2.30.0",
-    "react-day-picker": "^8.9.1",
-    "react-hook-form": "^7.47.0",
-    "react-dnd-html5-backend": "^16.0.1",
-    "react-dnd": "^16.0.1",
-    "react-dom": "^18.2.0",
-    "react": "^18.2.0",
     "next": "^13.5.6",
+    "path-to-regexp": "^6.2.1",
+    "react": "^18.2.0",
+    "react-day-picker": "^8.9.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "swr": "^2.2.4",
+    "tailwind-merge": "^1.14.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@coaster/tailwind-config": "*",
     "@coaster/tsconfig": "*",
+    "@next/bundle-analyzer": "^14.0.0",
     "@next/eslint-plugin-next": "^13.5.6",
     "@types/node": "^20.8.9",
     "@types/react": "^18.2.32",
