Optimize imports for smaller bundle size

--- a/frontend/packages/components/package.json
+++ b/frontend/packages/components/package.json
@@ -5,6 +5,7 @@
   "types": "./index.ts",
   "exports": {
     "./client": "./client.ts",
+    "./common": "./common.ts",
     "./server": "./server.ts"
   },
   "scripts": {
