Avoid barrel files for component package

--- a/frontend/packages/components/tsconfig.json
+++ b/frontend/packages/components/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "@coaster/tsconfig/react-library.json",
-  "include": [".", "../state/src/StoreProvider.tsx"],
+  "include": ["."],
   "exclude": ["dist", "build", "node_modules"]
 }
