--- a/frontend/apps/consumer/tsconfig.json
+++ b/frontend/apps/consumer/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "extends": "@coaster/tsconfig/nextjs.json",
   "compilerOptions": {
-    "plugins": [{ "name": "next" }]
+    "plugins": [{ "name": "next" }],
+    "baseUrl": ".",
+    "paths": {
+      "@coaster/components/*": ["../../packages/components/src/*"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
