--- a/frontend/packages/components/package.json
+++ b/frontend/packages/components/package.json
@@ -2,11 +2,8 @@
   "name": "@coaster/components",
   "version": "1.0.0",
   "sideEffects": false,
-  "types": "./index.ts",
   "exports": {
-    "./client": "./client.ts",
-    "./common": "./common.ts",
-    "./server": "./server.ts"
+    "./*": "./src/*"
   },
   "scripts": {
     "lint": "eslint ."
