--- a/frontend/apps/consumer/package.json
+++ b/frontend/apps/consumer/package.json
@@ -20,6 +20,10 @@
     "@highlight-run/next": "^7.0.1",
     "@highlight-run/react": "^3.2.1",
     "@hookform/resolvers": "^3.3.2",
+    "@portabletext/react": "^3.0.11",
+    "@sanity/asset-utils": "^1.3.0",
+    "@sanity/client": "^6.7.0",
+    "@sanity/image-url": "^1.0.2",
     "date-fns": "^2.30.0",
     "highlight.run": "^8.0.1",
     "immutability-helper": "^3.1.1",
@@ -40,6 +44,9 @@
     "@coaster/tsconfig": "*",
     "@next/bundle-analyzer": "^14.0.0",
     "@next/eslint-plugin-next": "^13.5.6",
+    "@portabletext/types": "^2.0.8",
+    "@sanity/types": "^3.19.1",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.8.9",
     "@types/react": "^18.2.32",
     "@types/react-dom": "^18.2.14",
