--- a/frontend/packages/assets/package.json
+++ b/frontend/packages/assets/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@coaster/assets",
-  "version": "1.0.1",
-  "main": "./index.ts",
-  "types": "./index.ts",
+  "version": "1.0.0",
+  "sideEffects": false,
+  "exports": {
+    "./*": "./src/*"
+  },
   "scripts": {
     "lint": "eslint ."
   },
