--- a/frontend/packages/assets/package.json
+++ b/frontend/packages/assets/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint ."
   },
   "devDependencies": {
-    "eslint-config-custom": "*"
+    "@coaster/eslint-config-custom": "*",
+    "@coaster/tsconfig": "*"
   }
 }
