--- a/frontend/apps/consumer/package.json
+++ b/frontend/apps/consumer/package.json
@@ -48,6 +48,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@coaster/eslint-config-custom": "*",
     "@coaster/tailwind-config": "*",
     "@coaster/tsconfig": "*",
     "@next/bundle-analyzer": "^14.0.0",
@@ -59,7 +60,6 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "autoprefixer": "^10.4.16",
-    "eslint-config-custom": "*",
     "postcss": "^8.4.31",
     "sharp": "^0.32.6",
     "tailwindcss": "^3.3.5",
