--- a/frontend/apps/supplier/package.json
+++ b/frontend/apps/supplier/package.json
@@ -40,6 +40,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@coaster/eslint-config-custom": "*",
     "@coaster/tailwind-config": "*",
     "@coaster/tsconfig": "*",
     "@next/bundle-analyzer": "^14.0.0",
@@ -48,7 +49,6 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "autoprefixer": "^10.4.16",
-    "eslint-config-custom": "*",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
