--- a/frontend/packages/components/package.json
+++ b/frontend/packages/components/package.json
@@ -29,13 +29,13 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@coaster/eslint-config-custom": "*",
     "@coaster/tsconfig": "*",
     "@types/google.maps": "^3.54.4",
     "@types/node": "^20.8.9",
     "@types/react": "^18.2.32",
     "@types/react-dom": "^18.2.14",
     "eslint": "^8.52.0",
-    "eslint-config-custom": "*",
     "typescript": "^5.2.2"
   }
 }
