--- a/frontend/packages/eslint-config-custom/package.json
+++ b/frontend/packages/eslint-config-custom/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-config-custom",
+  "name": "@coaster/eslint-config-custom",
   "license": "MIT",
   "version": "1.0.0",
   "private": true,
