Update packages and fix dependencies

--- a/frontend/packages/assets/package.json
+++ b/frontend/packages/assets/package.json
@@ -6,7 +6,7 @@
     "./*": "./src/*"
   },
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint \"**/*.ts*\""
   },
   "devDependencies": {
     "@coaster/eslint-config-custom": "*",
