--- a/frontend/packages/types/package.json
+++ b/frontend/packages/types/package.json
@@ -4,9 +4,6 @@
   "main": "./types.ts",
   "types": "./types.ts",
   "scripts": {
-    "lint": "eslint ."
-  },
-  "dependencies": {
-    "zod": "*"
+    "lint": "eslint \"**/*.ts*\""
   }
 }
