--- a/frontend/packages/components/package.json
+++ b/frontend/packages/components/package.json
@@ -6,34 +6,14 @@
     "./*": "./src/*"
   },
   "scripts": {
-    "lint": "eslint ."
-  },
-  "dependencies": {
-    "@coaster/assets": "*",
-    "@coaster/types": "*",
-    "@coaster/utils": "*",
-    "@floating-ui/react": "^0.26.5",
-    "@googlemaps/react-wrapper": "^1.1.35",
-    "@headlessui/react": "^1.7.18",
-    "@heroicons/react": "^2.1.1",
-    "@highlight-run/react": "^3.2.1",
-    "@hookform/resolvers": "^3.3.4",
-    "highlight.run": "^8.3.2",
-    "next": "^13.5.6",
-    "react": "^18.2.0",
-    "react-day-picker": "^8.10.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.3",
-    "swr": "^2.2.4",
-    "tailwind-merge": "^2.2.0",
-    "zod": "^3.22.4"
+    "lint": "eslint \"**/*.ts*\""
   },
   "devDependencies": {
     "@coaster/eslint-config-custom": "*",
     "@coaster/tsconfig": "*",
     "@types/google.maps": "^3.54.10",
-    "@types/node": "^20.11.0",
-    "@types/react": "^18.2.47",
+    "@types/node": "^20.11.5",
+    "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "eslint": "^8.56.0",
     "typescript": "^5.3.3"
