Update clean script

--- a/frontend/turbo.json
+++ b/frontend/turbo.json
@@ -13,7 +13,10 @@
       "cache": false,
       "persistent": true
     },
-    "clean": {
+    "clean-all": {
+      "cache": false
+    },
+    "//#clean-all": {
       "cache": false
     }
   }
