--- a/frontend/apps/consumer/package.json
+++ b/frontend/apps/consumer/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "clean": "rm -rf ./node_modules"
+    "clean-all": "rm -rf ./node_modules"
   },
   "dependencies": {
     "@coaster/assets": "*",
