--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
     "dev": "turbo run dev --concurrency 14",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "clean": "turbo run clean"
+    "clean": "turbo run clean-all",
+    "clean-all": "rm -rf ./node_modules"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
