Update dependency graph

--- a/frontend/packages/components/tsconfig.json
+++ b/frontend/packages/components/tsconfig.json
@@ -6,7 +6,7 @@
     "plugins": [{ "name": "next" }],
     "baseUrl": ".",
     "paths": {
-      "@coaster/assets/*": ["../../packages/assets/src/*"]
-    }
-  }
+      "@coaster/assets/*": ["../../packages/assets/src/*"],
+    },
+  },
 }
