Use Coaster throughout project

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -2,7 +2,7 @@ build:
 	go build -o bin/server cmd/main.go
 
 migrate:
-	migrate -path migrations/ -database "postgres://fabra:fabra@localhost:5432/fabra?sslmode=disable" up
+	migrate -path migrations/ -database "postgres://coaster:coaster@localhost:5432/coaster?sslmode=disable" up
 
 migrate-down:
-	migrate -path migrations/ -database "postgres://fabra:fabra@localhost:5432/fabra?sslmode=disable" down 1
+	migrate -path migrations/ -database "postgres://coaster:coaster@localhost:5432/coaster?sslmode=disable" down 1
