--- a/backend/dev/docker-compose.yaml
+++ b/backend/dev/docker-compose.yaml
@@ -1,11 +1,11 @@
 version: '3.1'
 
 services:
-  fabra_db:
+  coaster_db:
     image: postgis/postgis:15-master
     volumes:
       - ./certs:/var/lib/postgresql/certs
-      - ./init_fabra.sql:/docker-entrypoint-initdb.d/init_fabra.sql
+      - ./init_coaster.sql:/docker-entrypoint-initdb.d/init_coaster.sql
       - ./init_source.sql:/docker-entrypoint-initdb.d/init_source.sql
       - dbdata:/var/lib/postgresql/data
     ports:
